<resources>
    <string name="app_name">Campus Marketplace</string>
    <string name="login_title">Login</string>
    <string name="sign_in_to_continue_label">Sign in to continue.</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="log_in_label">Log In</string>
    <string name="forgot_password_label">Forgot Password</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="create_new_account_label">Create new account</string>
    <string name="name_label">Name</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="verify_label">Verify</string>
    <string name="already_registered_log_in_here_label">Already Registered? Log in here</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"
    </string>
    <string name="message_label">Message</string>
    <string name="about_us_label">About Us</string>
    <string name="account_label">Account</string>
    <string name="profile_label">Profile</string>
    <string name="logout_label">Logout</string>
    <string name="login_label">Login</string>
    <string name="profile_image_description">Profile Image</string>
    <string name="to_view_your_profile_label">to view your profile</string>
    <string name="email_required_error">Email Required</string>
    <string name="password_required_error">Password Required</string>
    <string name="email_password_error">Wrong Email or Password</string>
    <string name="send_label">Send</string>
    <string name="home_label">Home</string>
    <string name="chat_label">Chat</string>
    <string name="upload_profile_image_label">Upload Profile Image</string>
    <string name="name_required_error">Name Required</string>
    <string name="confirm_password_required_error">Confirm Password Required</string>
    <string name="phone_number_required_error">Phone Number Required</string>
    <string name="email_already_registered_error">Email Already Registered</string>
    <string name="password_not_matched_error">Password Not Matched</string>
    <string name="edit_profile_label">Edit Profile</string>
    <string name="buy_label">Buy</string>
    <string name="sell_label">Sell</string>
    <string name="forgot_password_email_sent_toast">Password reset email sent</string>
    <string name="forgot_password_failed_toast">Failed to send password reset email</string>
    <string name="old_password_label">Old Password</string>
    <string name="new_password_label">New Password</string>
    <string name="new_confirm_password_label">Confirm New Password</string>
    <string name="save_label">Save</string>
    <string name="enter_old_password_hint">Enter Old Password</string>
    <string name="enter_new_password_hint">Enter New Password</string>
    <string name="enter_confirm_new_password_hint">Enter Confirm New Password</string>
    <string name="address_label">Address</string>
    <string name="zip_code_label">Zip Code</string>
    <string name="state_label">State</string>
    <string name="address_required_error">Address Required</string>
    <string name="zip_code_required_error">Zip Code Required</string>
    <string name="change_photo_label">Change Photo</string>
    <string name="sign_up_successful_label">Sign Up Successful</string>
    <string name="password_updated_successfully_label">Password Updated Successfully</string>
    <string name="failed_to_update_password_label">Failed to update password</string>
    <string name="confirm_password_not_match_label">New Password and Confirm Password do not match</string>
    <string name="new_password_required_error">New Password Required</string>
    <string name="old_password_required_error">Old Password Required</string>
    <string name="incorrect_old_password_label">Incorrect Old Password</string>
    <string name="profile_image_required_error">Profile Image Required</string>
    <string name="profile_updated_label">Profile Updated</string>
    <string-array name="arrStates">
        <item>Johor</item>
        <item>Kedah</item>
        <item>Kelantan</item>
        <item>Malacca</item>
        <item>Negeri Sembilan</item>
        <item>Pahang</item>
        <item>Penang</item>
        <item>Perak</item>
        <item>Perlis</item>
        <item>Sabah</item>
        <item>Sarawak</item>
        <item>Selangor</item>
        <item>Terengganu</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_image_error">Upload Image Error</string>
    <string name="update_data_error">Update Data Error</string>
    <string name="contact_seller_label">Contact Seller</string>
    <string name="change_password">Change Password</string>
    <string name="buyer_welcome">Welcome</string>
    <string name="buyer_category">Categories</string>
    <string name="buyer_cat_digital">Digital</string>
    <string name="buyer_cat_fashion">Fashion</string>
    <string name="buyer_cat_electronics">Electronics</string>
    <string name="buyer_cat_beauty">Beauty</string>
    <string name="buyer_cat_viewall">View All</string>
    <string name="buyer_products">Products</string>
    <string name="buyer_seeall">See all</string>
    <string name="required_input">Required Input</string>
    <string name="cvv_must_be_3_digit">CVV must be 3 digit</string>
    <string name="card_number_must_be_16_digit">Card number must be 16 digit</string>
    <string-array name="months_array">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="years_array">
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
    </string-array>
    <string name="card">Card</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="payment_method">Payment Method</string>
    <string name="buy_now">Buy Now</string>
    <string name="holder_name">Holder Name</string>
    <string name="enter_holder_name">Enter Holder Name</string>
    <string name="card_number">Card Number</string>
    <string name="enter_card_number">Enter Card Number</string>
    <string name="expired_date">Expired Date</string>
    <string name="cvv">CVV</string>
    <string name="enter_cvv">Enter CVV</string>
    <string name="done">Done</string>
    <string name="search_anything">Search anything...</string>
    <string name="start_your_business">Start your business!</string>
    <string name="upload_product">Upload Product</string>
    <string name="all_products">All Products</string>
    <string name="orders">Orders</string>
    <string name="sales_summary">Sales Summary</string>
    <string name="salesSummaryHeader">Sales Summary</string>
    <string name="allProductHeader">All Product</string>
    <string name="ordersHeader">Orders</string>
    <string name="uploadProductHeader">upload Product</string>
    <string name="UploadProductLabel">Upload Product</string>
    <string name="UploadImage">Upload Image\n</string>
    <string name="productNameHeader">Product Name</string>
    <string name="productDescriptionHeader">Product Description</string>
    <string name="CategoryHeader">Category</string>
    <string name="enter_password_hint">Enter Password</string>
    <string name="new_email_label">New Email</string>
    <string name="enter_new_email_hint">Enter New Email</string>
    <string name="campus_marketplace">Campus Marketplace</string>
    <string name="logo">Logo</string>
    <string name="about_us">About Us</string>
    <string name="about_this_app">About This App</string>
    <string name="about_us_text">Campus Marketplace is the ultimate campus marketplace app tailored specifically for TARUMT students, enabling seamless buying and selling directly from their mobile devices. With Campus Marketplace, students can conveniently browse, purchase, and sell a wide range of products anytime, anywhere on campus. This innovative platform not only facilitates transactions but also fosters a vibrant ecosystem of small businesses among students. Campus Marketplace provides a centralized hub for students to showcase and trade their goods effortlessly. By engaging in transactional interactions within the campus community, Campus Marketplace promotes connectivity and strengthens relationships among students.</string>
    <string name="terms_condition">Terms Condition</string>
    <string name="term_conditions_text">By using Campus Marketplace, users agree to abide by its policies, including those related to buying, selling, and interacting within the campus community. Users must ensure the accuracy of their listings, comply with all applicable laws and regulations, and treat others with respect and integrity. Campus Marketplace reserves the right to moderate content, suspend accounts for violations, and update terms as necessary. By participating in Campus Marketplace, users contribute to a vibrant ecosystem of commerce and community engagement within TARUMT, fostering connectivity and relationships among students.</string>
    <string name="policies">Policies</string>
    <string name="terms_condition_text">The policies for Campus Marketplace, the campus marketplace app, encompass guidelines for user conduct, data privacy, and security. Users are expected to maintain ethical behavior, refrain from fraudulent activities, and respect the rights of others. Campus Marketplace collects and processes user data in accordance with its privacy policy, ensuring the confidentiality and security of personal information. Additionally, Campus Marketplace employs measures to safeguard against unauthorized access, data breaches, and malicious activities. By using Campus Marketplace, users agree to adhere to its policies and procedures, promoting a safe and trustworthy environment for buying and selling within the TARUMT campus community.</string>
    <string name="up_button_image">Up Button Image</string>
</resources>