<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view"
    >

    <group android:checkableBehavior="single">
        <item android:title="@string/app_name">
            <menu>
                <item android:id="@+id/message_list_menu"
                    android:title="@string/message_label"
                    android:icon="@drawable/chat_bubble_24" />
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/account_label">
            <menu>
                <item android:id="@+id/profile_menu"
                    android:title="@string/profile_label"
                    android:icon="@drawable/account_circle_24" />
                <item android:id="@+id/logout_menu"
                    android:title="@string/logout_label"
                    android:icon="@drawable/logout_24" />
            </menu>
        </item>
    </group>

    <group>
        <item android:id="@+id/about_us_menu"
            android:title="@string/about_us_label"
            android:icon="@drawable/info_24"/>
    </group>
</menu>
